--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>HickHub - home automation made easy</title>
-        <meta charset="utf-8">
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     </head>
     <body>
